fixed when click on card in regularmenu navigate to footer due to overflow it was happening and also used useNavigation to fetch current path

--- a/public/style.css
+++ b/public/style.css
@@ -19,7 +19,7 @@
 body, html {
     width: 100%;
     height: 100%;
-    overflow-x: hidden; 
+    /* overflow-x: hidden;  */
     background-color: var(--background-color);
     font-family: "Josefin Sans", sans-serif;
 }
